After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681972 - Fix uses of uninitialized memory
Fix uses of uninitialized memory
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-16 08:24 UTC by Stef Walter
Modified: 2012-08-16 19:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix uses of uninitialized memory (5.28 KB, patch)
2012-08-16 08:25 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-08-16 08:24:17 UTC
 * Most setters of a **error (such as g_set_error()
   and g_propagate_error() require and check that the
   GError pointer is NULL before setting).
 * Fix cases where a GError pointer was not initialized
   to NULL, and instead relied on the stack value that
   happened to be present.
Comment 1 Stef Walter 2012-08-16 08:25:03 UTC
Created attachment 221349 [details] [review]
Fix uses of uninitialized memory
Comment 2 Ray Strode [halfline] 2012-08-16 17:28:14 UTC
Review of attachment 221349 [details] [review]:

wow, quite a few of these.

::: gui/libgdm/gdm-client.c
@@ +1204,1 @@
 

this one is unnecessary.
Comment 3 Stef Walter 2012-08-16 19:40:16 UTC
Attachment 221349 [details] pushed as 9dd54ca - Fix uses of uninitialized memory