Fix uses of uninitialized memory

* Most setters of a **error (such as g_set_error()
   and g_propagate_error() require and check that the
   GError pointer is NULL before setting).
 * Fix cases where a GError pointer was not initialized
   to NULL, and instead relied on the stack value that
   happened to be present.

https://bugzilla.gnome.org/show_bug.cgi?id=681972